API backend pronta

--- a/PlaceSearchAPI/Views/Shared/_Layout.cshtml
+++ b/PlaceSearchAPI/Views/Shared/_Layout.cshtml
@@ -89,6 +89,13 @@
                 </h6>
                 <ul class="" id="submenu"></ul>
             </li>
+            <li class="nav-item mt-5">
+                <h6>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    Meus Locais Favoritos <span id="tot-place"></span>
+                </h6>
+                <ul id="submenu-favorite"></ul>
+            </li>
         </ul>
     </div>
 
