Frontend consumindo API

--- a/PlaceSearchAPI/Views/Shared/_Layout.cshtml
+++ b/PlaceSearchAPI/Views/Shared/_Layout.cshtml
@@ -94,6 +94,9 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                     Meus Locais Favoritos <span id="tot-place"></span>
                 </h6>
+                <div id="favorite-loding" class="ml-5">
+                    <img src="img/loading.gif" style="width: 20px">
+                </div>
                 <ul id="submenu-favorite"></ul>
             </li>
         </ul>
